@@ -460,7 +460,7 @@ The class hierarchy for built-in exceptions is:
 	  +-- DeprecationWarning
 	  +-- PendingDeprecationWarning
 	  +-- SyntaxWarning
-	  +-- OverflowWarning
+	  +-- OverflowWarning (not generated in 2.4; won't exist in 2.5)
 	  +-- RuntimeWarning
 	  +-- FutureWarning
 \end{verbatim}
